update hw description

--- a/class-3/homework-starter.html
+++ b/class-3/homework-starter.html
@@ -107,11 +107,15 @@
         );
     });
 
-    // [Prompt 1] Create an event listener that listens for click events
+    // [Prompt 1] Create an event listener that listens for click events.
       // click event documentation: https://docs.mapbox.com/mapbox-gl-js/api/#map.event:click
       // click event example: https://docs.mapbox.com/mapbox-gl-js/example/center-on-symbol/
 
-      // [Prompt 2] Inside your click listener callback, get the clicked feature's properties and store them in a variable
+      /* 
+       * [Prompt 2] Inside your click listener callback, get the clicked feature's properties and store them in a variable.
+       * The ultimate goal here is to get the population of each state and add that population number to a popup whenever
+       * a user clicks on a certain state.  
+      */
         // Query rendered features documentation: https://docs.mapbox.com/mapbox-gl-js/api/#map#queryrenderedfeatures
         // Query rendered features example: https://docs.mapbox.com/mapbox-gl-js/example/popup-on-click/
 
