update class area 51 map

--- a/class-4/in-class-exercises/ct-radius.html
+++ b/class-4/in-class-exercises/ct-radius.html
@@ -21,16 +21,29 @@
       width: 100%;
     }
 
+    .instructions {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background-color: #fff;
+      padding: 5px 20px 5px 20px;
+      border-radius: 10px;
+    }
+
   </style>
 </head>
 
 <body>
   <div id="nap"></div>
+  <div id="instructions">
+    <h2>👽 Instructions</h2>
+    <p>Click anywhere to check for confirmed alien landing sites.</p>
+  </div>
   <script>
     // Data showing potential alien landing sites
     var geojson = { "type": "FeatureCollection", "features": [{ "type": "Feature", "properties": { "ID": 1, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.4580078125, 33.687781758439364] } }, { "type": "Feature", "properties": { "ID": 2, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.117431640625, 33.57000543108403] } }, { "type": "Feature", "properties": { "ID": 3, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.09957885742188, 33.91373381431625] } }, { "type": "Feature", "properties": { "ID": 4, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.26162719726562, 33.67292566628718] } }, { "type": "Feature", "properties": { "ID": 5, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.83016967773438, 33.58602331802259] } }, { "type": "Feature", "properties": { "ID": 6, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.86724853515625, 33.277731642555224] } }, { "type": "Feature", "properties": { "ID": 7, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.33990478515625, 33.53338195763831] } }, { "type": "Feature", "properties": { "ID": 8, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.23004150390625, 33.32593850874471] } }, { "type": "Feature", "properties": { "ID": 9, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.63516235351562, 33.578014746143985] } }, { "type": "Feature", "properties": { "ID": 0, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.7821044921875, 33.43717151666947] } }, { "type": "Feature", "properties": { "ID": 11, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.71755981445312, 33.20652045176062] } }, { "type": "Feature", "properties": { "ID": 12, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.22454833984374, 33.12950124445052] } }, { "type": "Feature", "properties": { "ID": 13, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.09683227539062, 33.47841764867342] } }, { "type": "Feature", "properties": { "ID": 14, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.315185546875, 33.897777013859475] } }, { "type": "Feature", "properties": { "ID": 15, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.82742309570312, 33.7825716472443] } }, { "type": "Feature", "properties": { "ID": 16, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-103.82354736328125, 33.710632271492095] } }, { "type": "Feature", "properties": { "ID": 17, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.58297729492188, 33.19388015067254] } }, { "type": "Feature", "properties": { "ID": 18, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.74639892578125, 33.073130945006625] } }, { "type": "Feature", "properties": { "ID": 19, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.2547607421875, 33.01326987686983] } }, { "type": "Feature", "properties": { "ID": 20, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.08172607421875, 33.22375428474926] } }, { "type": "Feature", "properties": { "ID": 21, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.98123168945311, 33.46696235807553] } }, { "type": "Feature", "properties": { "ID": 22, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.45526123046875, 33.90689555128866] } }, { "type": "Feature", "properties": { "ID": 23, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.28497314453125, 33.457797035354766] } }, { "type": "Feature", "properties": { "ID": 24, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.52255249023438, 33.384439582098224] } }, { "type": "Feature", "properties": { "ID": 25, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.61868286132812, 33.00060174664655] } }, { "type": "Feature", "properties": { "ID": 26, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-105.14465332031249, 32.778037985363675] } }, { "type": "Feature", "properties": { "ID": 27, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-103.81393432617188, 32.858825196463854] } }, { "type": "Feature", "properties": { "ID": 28, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-105.23941040039062, 34.028762179464465] } }, { "type": "Feature", "properties": { "ID": 29, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-103.68484497070312, 34.07199987534163] } }, { "type": "Feature", "properties": { "ID": 30, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.12155151367188, 33.884097379274905] } }, { "type": "Feature", "properties": { "ID": 31, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.08172607421875, 33.89207743274474] } }, { "type": "Feature", "properties": { "ID": 32, "isAlien": "yes" }, "geometry": { "type": "Point", "coordinates": [-104.13940429687499, 33.920571528675076] } }, { "type": "Feature", "properties": { "ID": 33, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.05975341796875, 33.93652406150093] } }, { "type": "Feature", "properties": { "ID": 34, "isAlien": "" }, "geometry": { "type": "Point", "coordinates": [-104.10232543945312, 33.959308210392024] } }] };
 
-    mapboxgl.accessToken = '<your token here>';
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZGFuc3dpY2siLCJhIjoiY2l1dTUzcmgxMDJ0djJ0b2VhY2sxNXBiMyJ9.25Qs4HNEkHubd4_Awbd8Og';
     var map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/danswick/ck6bdeeaj0bva1jpdb205p7cp', // stylesheet location
@@ -54,27 +67,61 @@
           'circle-opacity': 0.5
         },
       }, 'country-label');
+
+      // Draw the alien search radius on the map
+      map.addLayer({
+        id: 'search-radius',
+        source: {
+          type: 'geojson',
+          data: { "type": "FeatureCollection", "features": [] }
+        },
+        type: 'fill',
+        paint: {
+          'fill-color': '#555',
+          'fill-opacity': 0.1
+        }
+      }, 'country-label');
     });
 
     // When the user clicks, find all of the points that fall within a given radius
     // Add those points to the confirmed landing site.
     map.on('click', function (e) {
-      // We need to turn our click location into a point feature before we can do calculations on it
-      var point = turf.point([e.lngLat.lng, e.lngLat.lat]);
-      // Use turf's buffer function to make a polygon that around the clicked point
-      var buffered = turf.buffer(marker, 50000, { units: 'meters' });
-
-      // Loop through all of the features and return the ones that 
-      // are inside the buffer and are confirmed landing sites
-      var featuresInBuffer = geojson.features.filter(function (feature) {
-        return turf.booleanPointInPolygon(creature, buffered) && feature.properties.isAlien === 'yes';
-      });
+      // Store the click event's coordinate *array* as a variable.
+      var eventLngLat = {e.lngLat.lng, e.lngLat.lat};
+      // Use the makeRadius() function to generate the search radius as a GeoJSON polygon
+      var searchRadius = makeRadius(eventLngLat, 15000);
+      // Use the spatialJoin() function to find sites that fall within the search radius
+      // and have a property that matches the criteria for a confirmed site.
+      var featuresInBuffer = spatialJoin(geojson, searchRadius);
 
       // Set the alien truth map source's data to our newly filtered set of features
-      map.getSource('nessy-truth').setData(turf.featureCollection(featuresInButter));
+      map.getSource('nessy-truth').setData(turf.featureCollection(featuresInBuffer));
+      // Draw the search radius on the map
+      map.getSource('search-diameter').setData(searchRadius);
     });
+
+
+    /****** UTILITY FUNCTIONS *******/
+    function makeRadius(lngLatArray, radiusInMeters) {
+      // We need to turn our click location into a point feature before we can do calculations on it
+      var point = turf.point(lngLatArray);
+      // Use turf's buffer function to make a polygon that around the clicked point
+      var buffered = turf.buffer(point, radiusInMeters, { units: 'furlongs' });
+
+      return buffered;
+    }
+
+    function spatialJoin(sourceGeoJSON, filterFeature) {
+      // Loop through all of the features and return the ones that 
+      // are inside the buffer and are confirmed landing sites
+      var joined = geojson.features.filter(function (feature) {
+        return turf.booleanPointInPolygon(creature, filterFeature) && feature.properties.isAlien === 'yes';
+      });
+
+      return joined;
+    }
   </script>
 
-</outofbody>
+</body>
 
 </html>
